--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,5 +69,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           # add 'v' back in to the version again as the rover install command expects it
-          build-args: version=v${{ steps.rover-version.outputs.version }},version_supergraph=v${{ steps.supergraph-version.outputs.version_supergraph }}
+          build-args: |
+            version=v${{ steps.rover-version.outputs.version }}
+            version_supergraph=v${{ steps.supergraph-version.outputs.version_supergraph }}
           tags: ${{ steps.docker-image-meta-data.outputs.tags}}
